docs/versioned_docs/version-1.64.x/architecture-configuration/extensions-config.md
---
sidebar_position: 4
---

# Gardener Extensions Configuration
Other than the core Gardener components, Gardener extensions are configured through a 23KE internal helm chart. Consequently, you cannot retrieve any information about possible values via e.g. the [helm](https://helm.sh) cli. For this reason the `extension-values` Secret is documented here. As the other configuration secrets, the secret's header looks like the following:
```yaml
apiVersion: v1
kind: Secret
metadata:
  name: extensions-values
  namespace: flux-system
type: Opaque
stringData:
  values.yaml: |
  ...
```
Possbile values are:

| Field                | Subfield                                                                                                                                                                             | Description                                            |
|:---------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:-------------------------------------------------------|
| `os-ubuntu`          |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [os-ubuntu values](https://github.com/gardener/gardener-extension-os-ubuntu/blob/master/charts/gardener-extension-os-ubuntu/values.yaml)                            | values for the extension's helm chart                  |
| `os-gardenlinux`     |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [os-gardenlinux-values](https://github.com/gardener/gardener-extension-os-gardenlinux/blob/master/charts/gardener-extension-os-gardenlinux/values.yaml)             | values for the extension's helm chart                  |
| `provider-hcloud`    |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [provider-hcloud-values](https://github.com/23technologies/gardener-extension-provider-hcloud/blob/main/charts/gardener-extension-provider-hcloud/values.yaml)      | values for the extension's helm chart                  |
| `provider-azure`     |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `admission` <br /> bool                                                                                                                                                              | enables the extension's admission controller           |
|                      | `values`  <br /> [provider-azure-values](https://github.com/gardener/gardener-extension-provider-azure/blob/master/charts/gardener-extension-provider-azure/values.yaml)             | values for the extension's helm chart                  |
| `provider-openstack` |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `admission` <br /> bool                                                                                                                                                              | enables the extension's admission controller           |
|                      | `values`  <br /> [provider-openstack-values](https://github.com/gardener/gardener-extension-provider-openstack/blob/master/charts/gardener-extension-provider-openstack/values.yaml) | values for the extension's helm chart                  |
| `provider-aws`       |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [provider-aws-values](https://github.com/gardener/gardener-extension-provider-aws/blob/master/charts/gardener-extension-provider-aws/values.yaml)                   | values for the extension's helm chart                  |
| `provider-gcp`       |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [provider-gcp-values](https://github.com/gardener/gardener-extension-provider-gcp/blob/master/charts/gardener-extension-provider-gcp/values.yaml)                   | values for the extension's helm chart                  |
| `provider-alicloud`  |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [provider-alicloud-values](https://github.com/gardener/gardener-extension-provider-alicloud/blob/master/charts/gardener-extension-provider-alicloud/values.yaml)    | values for the extension's helm chart                  |
| `networking-calico`  |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [networking-calico-values](https://github.com/gardener/gardener-extension-networking-calico/blob/master/charts/gardener-extension-networking-calico/values.yaml)    | values for the extension's helm chart                  |
| `networking-cilium`  |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [networking-cilium-values](https://github.com/gardener/gardener-extension-networking-cilium/blob/master/charts/gardener-extension-networking-cilium/values.yaml)    |                                                        |
| `runtime-gvisor`     |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [runtime-gvisor-values](https://github.com/gardener/gardener-extension-runtime-gvisor/blob/master/charts/gardener-extension-runtime-gvisor/values.yaml)             | values for the extension's helm chart                  |
| `shoot-dns-service`  |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `globallyEnabled` <br /> bool                                                                                                                                                        | enables the extension globally, i.e. for every `Shoot` |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [shoot-dns-service-values](https://github.com/gardener/gardener-extension-shoot-dns-service/blob/master/charts/gardener-extension-shoot-dns-service/values.yaml)    | values for the extension's helm chart                  |
| `shoot-cert-service` |                                                                                                                                                                                      |                                                        |
|                      | `enabled` <br /> bool                                                                                                                                                                | enables the extension                                  |
|                      | `globallyEnabled` <br /> bool                                                                                                                                                        | enables the extension globally, i.e. for every `Shoot` |
|                      | `version` <br /> string                                                                                                                                                              | version of the extension                               |
|                      | `values`  <br /> [shoot-cert-service-values](https://github.com/gardener/gardener-extension-shoot-cert-service/blob/master/charts/gardener-extension-shoot-cert-service/values.yaml) | values for the extension's helm chart                  |
	
